--- a/css/plugins/image.css
+++ b/css/plugins/image.css
@@ -9,6 +9,9 @@
   display: block;
   content: "";
 }
+.fr-element img {
+  cursor: pointer;
+}
 .fr-image-resizer {
   position: absolute;
   border: solid 1px #1e88e5;
