--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -185,13 +185,13 @@ iframe.fr-iframe {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 .fr-box.fr-basic.fr-bottom .fr-wrapper {
+  border-bottom: 0;
   border-radius: 2px 2px 0 0;
   -moz-border-radius: 2px 2px 0 0;
   -webkit-border-radius: 2px 2px 0 0;
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
-  border-bottom: 0;
   -webkit-box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.12), 0 -1px 2px rgba(0, 0, 0, 0.24);
   -moz-box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.12), 0 -1px 2px rgba(0, 0, 0, 0.24);
   box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.12), 0 -1px 2px rgba(0, 0, 0, 0.24);
@@ -941,9 +941,7 @@ iframe.fr-iframe {
   top: auto;
   bottom: -9px;
   border-bottom: 0;
-  border-top-color: inherit;
-  border-top-style: solid;
-  border-top-width: 5px;
+  border-top: 5px solid #222222;
 }
 .fr-text-edit-layer {
   width: 250px;
