--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -165,13 +165,11 @@ iframe.fr-iframe {
   background: #ffffff;
   border: 0px;
   border-top: 0;
-}
-.fr-box.fr-basic .fr-wrapper .fr-placeholder {
-  top: 10px;
-  left: 10px;
+  top: 0;
+  left: 0;
 }
 .fr-box.fr-basic.fr-rtl .fr-wrapper .fr-placeholder {
-  right: 10px;
+  right: 0;
   left: auto;
 }
 .fr-box.fr-basic.fr-top .fr-wrapper {
