--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -13,7 +13,7 @@
 .fr-element:focus {
   outline: 0px solid transparent;
 }
-.fr-basic .fr-element {
+.fr-box.fr-basic .fr-element {
   text-align: initial;
   color: #000000;
   padding: 10px;
