--- a/css/themes/red.css
+++ b/css/themes/red.css
@@ -9,7 +9,7 @@
   display: block;
   content: "";
 }
-.red-theme .fr-basic .fr-element {
+.red-theme.fr-box.fr-basic .fr-element {
   color: #000000;
   padding: 10px;
   overflow-x: auto;
