--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -645,6 +645,16 @@
 .dark-theme .fr-view table th {
   background: #e6e6e6;
 }
+.dark-theme .fr-view[dir="rtl"] blockquote {
+  border-right: solid 2px #5e35b1;
+  margin-right: 0;
+}
+.dark-theme .fr-view[dir="rtl"] blockquote blockquote {
+  border-color: #00bcd4;
+}
+.dark-theme .fr-view[dir="rtl"] blockquote blockquote blockquote {
+  border-color: #43a047;
+}
 .dark-theme .fr-view blockquote {
   border-left: solid 2px #5e35b1;
   margin-left: 0;
