--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -8,6 +8,7 @@
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-element,
 .fr-element:focus {
@@ -134,6 +135,7 @@ iframe.fr-iframe {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-wrapper .fr-placeholder {
   position: absolute;
@@ -270,6 +272,7 @@ iframe.fr-iframe {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-toolbar.fr-rtl {
   text-align: right;
@@ -773,6 +776,7 @@ iframe.fr-iframe {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-popup .fr-buttons .fr-btn {
   display: inline-block;
