--- a/css/froala_editor.pkgd.css
+++ b/css/froala_editor.pkgd.css
@@ -8,6 +8,7 @@
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-element,
 .fr-element:focus {
@@ -134,6 +135,7 @@ iframe.fr-iframe {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-wrapper .fr-placeholder {
   position: absolute;
@@ -270,6 +272,7 @@ iframe.fr-iframe {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-toolbar.fr-rtl {
   text-align: right;
@@ -773,6 +776,7 @@ iframe.fr-iframe {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-popup .fr-buttons .fr-btn {
   display: inline-block;
@@ -1011,6 +1015,7 @@ iframe.fr-iframe {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-box .fr-counter {
   position: absolute;
@@ -1052,6 +1057,7 @@ iframe.fr-iframe {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 textarea.fr-code {
   display: none;
@@ -1149,6 +1155,7 @@ textarea.fr-code {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-popup .fr-colors-tabs {
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -1257,6 +1264,7 @@ textarea.fr-code {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-drag-helper {
   background: #1e88e5;
@@ -1284,6 +1292,7 @@ textarea.fr-code {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-popup .fr-emoticon {
   display: inline-block;
@@ -1306,6 +1315,7 @@ textarea.fr-code {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-file-upload-layer {
   border: dashed 2px #bdbdbd;
@@ -1459,6 +1469,7 @@ body.fr-fullscreen {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-element img {
   cursor: pointer;
@@ -1687,6 +1698,7 @@ body.fr-fullscreen {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 body.prevent-scroll {
   overflow: hidden;
@@ -1764,6 +1776,7 @@ body.prevent-scroll.fr-mobile {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-modal .fr-modal-wrapper .fr-modal-title .fr-modal-title-line h4 {
   font-size: 18px;
@@ -1850,6 +1863,7 @@ body.prevent-scroll.fr-mobile {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-modal .fr-modal-wrapper div.fr-scroller div.fr-image-list .fr-list-column {
   float: left;
@@ -2052,6 +2066,7 @@ body.prevent-scroll.fr-mobile {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-line-breaker {
   cursor: text;
@@ -2073,6 +2088,7 @@ body.prevent-scroll.fr-mobile {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-quick-insert {
   position: absolute;
@@ -2124,6 +2140,7 @@ body.prevent-scroll.fr-mobile {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-element table td.fr-selected-cell,
 .fr-element table th.fr-selected-cell {
@@ -2212,6 +2229,7 @@ body.prevent-scroll.fr-mobile {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-popup.fr-above .fr-table-size .fr-select-table-size > span {
   display: inline-block !important;
@@ -2275,6 +2293,7 @@ body.prevent-scroll.fr-mobile {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-element .fr-video {
   user-select: none;
