--- a/css/plugins/image_manager.css
+++ b/css/plugins/image_manager.css
@@ -8,6 +8,7 @@
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 body.prevent-scroll {
   overflow: hidden;
@@ -85,6 +86,7 @@ body.prevent-scroll.fr-mobile {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-modal .fr-modal-wrapper .fr-modal-title .fr-modal-title-line h4 {
   font-size: 18px;
@@ -171,6 +173,7 @@ body.prevent-scroll.fr-mobile {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
 .fr-modal .fr-modal-wrapper div.fr-scroller div.fr-image-list .fr-list-column {
   float: left;
