--- a/css/plugins/quick_insert.css
+++ b/css/plugins/quick_insert.css
@@ -26,6 +26,9 @@
   -ms-transform: rotate(135deg);
   -o-transform: rotate(135deg);
 }
+.fr-quick-insert.fr-hidden {
+  display: none;
+}
 .fr-qi-helper {
   position: absolute;
   z-index: 3;
