--- a/css/themes/red.css
+++ b/css/themes/red.css
@@ -693,6 +693,10 @@
   width: 38px;
   height: 37px;
 }
+.red-theme.fr-toolbar .fr-command.fr-btn.fr-btn-text,
+.red-theme.fr-popup .fr-command.fr-btn.fr-btn-text {
+  width: auto;
+}
 .red-theme.fr-toolbar .fr-command.fr-btn i,
 .red-theme.fr-popup .fr-command.fr-btn i {
   font-size: 15px;
@@ -705,6 +709,7 @@
   line-height: 14px;
   min-width: 38px;
   height: 15px;
+  padding: 0 2px;
 }
 .red-theme.fr-toolbar .fr-command.fr-btn img,
 .red-theme.fr-popup .fr-command.fr-btn img {
